<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Water Target">


        <Preference
            app:key="setup"
            app:title="Redo Setup"
            app:summary="Change your personal info and run the setup again"/>

        <Preference
            app:key="custom"
            app:title="Custom Water Target"
            app:summary="Input your own Water Target"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/log_header">

        <SwitchPreferenceCompat
            app:key="time"
            app:defaultValue="true"
            app:title="@string/time_title" />

        <SwitchPreferenceCompat
            app:key="owl"
            app:defaultValue="true"
            app:title="@string/owl_title"
            app:summary="When ending the day, if you finish before 4am, it logs to the previous day."/>

        <SwitchPreferenceCompat
            app:key="sum"
            app:defaultValue="true"
            app:title="@string/sum_title"
            app:summary="When ending the day more than once on the same day, instead of overwriting the day, it adds them together."/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/track_header">
        <Preference
            app:key="clearGraph"
            app:title="Clear Graph"
            app:summary="Clear ALL tracking data / graph data"/>
    </PreferenceCategory>

</PreferenceScreen>
